--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>André Ribeiro | Developer</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
-    <link rel="icon" href="assets/imagens/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="font-awesome.min.css">
+    <link rel="icon" href="favicon.png" type="image/x-icon" />
 </head>
 
 <body>
     <div id="profile">
-        <img id="userPhoto" src="assets/images/profile.png" alt="">
+        <img id="userPhoto" src="profile.png" alt="">
         <div id="userName">
             <h1>André Ribeiro Borges</h1>
             <p>Python and Database Developer<br>Co-founder 
