--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -9,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="icon" href="favicon.png" type="image/x-icon" />
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 </head>
 
 <body>
@@ -21,16 +21,32 @@
         </div>
     </div>
     <div id="links">
-        <a class="link" href="https://github.com/AndreRibeiroBorges" target="_blank"><i class="fa fa-github"></i> Github</a>
-        <a class="link" href="https://www.linkedin.com/in/andre-ribeiro-borges/" target="_blank"><i class="fa fa-linkedin"
-                aria-hidden="true"></i> LinkedIn</a>
-        <a class="link" href="https://www.redwolfsystem.com/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i>
+        <a class="link" href="https://github.com/AndreRibeiroBorges" target="_blank">
+            
+            <span class="iconify" data-icon="akar-icons:github" data-inline="false"></span>
+
+        Github</a>
+        <a class="link" href="https://www.linkedin.com/in/andre-ribeiro-borges/" target="_blank">
+            <!-- <i class="fa fa-linkedin"
+                aria-hidden="true">
+            
+            </i>  -->
+            <span class="iconify" data-icon="logos:linkedin-icon" data-inline="false"></span> 
+            LinkedIn</a>
+
+        <a class="link" href="https://www.redwolfsystem.com/" target="_blank">
+            <!-- <i class="fa fa-globe" aria-hidden="true"></i> -->
+            <span class="iconify" data-icon="dashicons:admin-site" data-inline="false"></span>
             RedWolfSystem</a>
-        <a class="link" href="mailto:andreribeiro41@hotmail.com" target="_blank"><i class="fa fa-envelope"
-                aria-hidden="true"></i>
+
+        <a class="link" href="mailto:andreribeiro41@hotmail.com" target="_blank">
+            <!-- <i class="fa fa-envelope" aria-hidden="true"></i> -->
+            <span class="iconify" data-icon="dashicons:email-alt" data-inline="false"></span>
             E-mail</a>
-        <a class="link" href="https://web.whatsapp.com/send?phone=+5521982821147" target="_blank"><i
-                class="fa fa-whatsapp" aria-hidden="true"></i>
+
+        <a class="link" href="https://web.whatsapp.com/send?phone=+5521982821147" target="_blank">
+            <!-- <i class="fa fa-whatsapp" aria-hidden="true"></i> -->
+            <span class="iconify" data-icon="logos:whatsapp" data-inline="false"></span>
             WhatsApp</a>
     </div>
 </body>
