--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="profile">
         <img id="userPhoto" src="profile.png" alt="">
         <div id="userName">
-            <h1>André Ribeiro Borges</h1>
+            <h1>André Ribeiro</h1>
             <p>Python and Database Developer<br>Co-founder 
                 <a href="https://www.redwolfsystem.com/" > RedWolfSystem </a></p>
         </div>
